force-app/main/default/objects/Account/fields/Max_Contact_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Max_Contact_Allowed__c</fullName>
    <label>Max Contact Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>