force-app/main/default/objects/Account/fields/Modify_Task__c.field-meta.xml
<CustomField>
    <fullName>Modify_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modify Task</label>
    <type>Checkbox</type>
</CustomField>