force-app/main/default/objects/Account/fields/number__c.field-meta.xml
<CustomField>
    <fullName>number__c</fullName>
    <formula>No_of_Contacts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>