force-app/main/default/objects/Account/recordTypes/Random.recordType-meta.xml
<RecordType>
    <fullName>Random</fullName>
    <active>true</active>
    <label>Random</label>
</RecordType>