force-app/main/default/objects/Account/recordTypes/Testing.recordType-meta.xml
<RecordType>
    <fullName>Testing</fullName>
    <active>true</active>
    <label>Testing</label>
</RecordType>